--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<h1>Merge Conflicts</h1>
-<p>We have learned about branching.Try again!</p>
+<h1>Merge Conflicts-branch number 2</h1>
+<p>We have learned about branching.</p>
