--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<h1>Merge Conflicts-branch number 2try again!</h1>
-<p>We have learned about branching and again.</p>
+<h1>Merge Conflicts-branch number 2try again!merge conflicts</h1>
+<p>We have learned about branching and againmerge conflicts.</p>
