--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1>Merge Conflicts-branch number 2try again!</h1>
-<p>We have learned about branching and again.</p>
+<p>We have learned about branching HILARY</p>
